# AgentMesh

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW_IT_WORKS.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  Setup.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/api/: main.py
configs/: local.env.example
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/scripts/: capture-screenshots.mjs  smoke.mjs
dashboard/src/: App.tsx  api.ts  appTypes.ts  index.css  main.tsx  types.ts
dashboard/src/components/common/: Actions.tsx  Badges.tsx  Cards.tsx  Inputs.tsx  JsonViewer.tsx
dashboard/src/components/layout/: GlobalFilters.tsx  Navigation.tsx  TopBar.tsx
dashboard/src/components/provider/: ProviderHealthPanel.tsx
dashboard/src/components/tables/: DataTable.tsx
dashboard/src/components/trace/: FailureInbox.tsx  SpanTree.tsx  TraceDetail.tsx  TraceInspector.tsx  TracesTable.tsx  WaterfallTimeline.tsx
dashboard/src/pages/: OverviewPage.tsx  SecondaryPages.tsx  TraceExplorerPage.tsx  WorkflowsPage.tsx
dashboard/src/utils/: format.ts
docker/: production.env.example
docs/: README.md  agents.md  api_reference.md  approvals.md  cli.md  concepts.md  configuration.md  cost-tracking.md  dashboard.md  docker.md  evaluations.md  examples.md  governance.md  memory-and-rag.md  model-providers.md  opentelemetry.md  production_stack.md  prompts.md  replay.md  security.md  tools.md  tracing.md  troubleshooting.md  workflows.md
examples/: cost_budget_workflow.py  dashboard_demo.py  failed_run_debugging.py  hello_agent.py  human_approval.py  human_approval_workflow.py  mock_model_test_workflow.py  multi_model_routing.py  ollama_local_model.py  openai_compatible_provider.py  parallel_multi_agent.py  rag_document_qa.py  rag_qa.py  replay_from_checkpoint.py  research_team.py  researcher_writer_reviewer.py  simple_two_agent.py  time_travel_debugging.py  tool_calling_agent.py  tool_using_agent.py
src/agentmesh/: __init__.py  agents.py  brokers.py  cli.py  costs.py  dashboard.py  debug.py  demo.py  dependencies.py  errors.py  evaluation.py  event_bus.py  memory.py  messages.py  observability.py  otel.py  otel_export.py  planning.py  plugins.py  postgres.py  pricing.py  providers.py  rag.py  reliability.py  routing.py  sandbox.py  scheduler.py  services.py  settings.py  storage.py  stores.py  task.py  telemetry.py  tools.py  tracing.py  types.py  validation.py  workflow.py
tests/: test_cli_dashboard.py  test_hardening.py  test_production_adapters.py  test_production_features.py  test_provider_adapters.py  test_runtime_debug_costs.py  test_tools_memory_rag.py  test_workflow.py
(+5 files in other folders)
