[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-ai"
version = "0.3.0a0"
description = "Async multi-agent framework with traceability, observability, dashboarding, and extensibility."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentMesh Contributors" }]
keywords = ["agents", "llm", "multi-agent", "observability", "traceability", "rag", "workflow", "opentelemetry", "replay", "cost-tracking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/raghuece455/AgentMesh"
Repository = "https://github.com/raghuece455/AgentMesh"
Documentation = "https://github.com/raghuece455/AgentMesh/tree/main/docs"
"Bug Tracker" = "https://github.com/raghuece455/AgentMesh/issues"
Changelog = "https://github.com/raghuece455/AgentMesh/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]
dotenv = [
  "python-dotenv>=1.0.0",
]
faiss = [
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
]
nats = [
  "nats-py>=2.7.0",
]
otel = [
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp-proto-http>=1.26.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]
redis = [
  "redis>=5.0.0",
]
production = [
  "faiss-cpu>=1.8.0",
  "nats-py>=2.7.0",
  "numpy>=1.26.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp-proto-http>=1.26.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
]
all = [
  "faiss-cpu>=1.8.0",
  "nats-py>=2.7.0",
  "numpy>=1.26.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp-proto-http>=1.26.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
agentmesh = "agentmesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.uv]
package = true
